[package]
name = "web-render"
version = "0.0.0"
description = "This library aids in rendering webpages to text."
readme = "README.md"
repository = "https://github.com/nikdeapen/web-render"
homepage = "https://github.com/nikdeapen/web-render"
authors = ["Nik Deapen <nik@deapen.com>"]
edition = "2021"
license = "MIT"

[dependencies]
